# note-pal

./: README.md  pyproject.toml
note_pal/: database.py  main.py  repository.py
