[tool.poetry]
name = "note-pal"
version = "0.1.0"
description = ""
authors = ["Rafael Vasconcelos <rvascons@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.13.0"

[tool.poetry.scripts]
note-pal = "note_pal.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
